adding bubblesview for touch movement and activated bubbles client engine

--- a/client/android/app/src/main/res/layout/activity_main.xml
+++ b/client/android/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="test_room" />
+        android:text="test_room"
+        android:contentDescription="room name" />
 
     <CheckBox
         android:text="@string/secure_connection"
