--- a/client/android/app/src/main/res/layout/activity_bubbles.xml
+++ b/client/android/app/src/main/res/layout/activity_bubbles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_bubbles"
     android:layout_width="match_parent"
@@ -10,4 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.vapa.bubbles.BubblesActivity">
 
-</RelativeLayout>
+    <ccom.example.vapa.bubbles.BubblesView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</FrameLayout>
