--- a/client/android/app/src/main/res/layout/activity_bubbles.xml
+++ b/client/android/app/src/main/res/layout/activity_bubbles.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.vapa.bubbles.BubblesActivity">
 
-    <ccom.example.vapa.bubbles.BubblesView
+    <com.example.vapa.bubbles.BubblesView
+        android:id="@+id/bubblesView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </FrameLayout>
