--- a/client/android/app/src/main/res/layout/activity_main.xml
+++ b/client/android/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,16 @@
         android:layout_alignParentStart="true" />
 
     <CheckBox
+        android:text="@string/secure_connection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox1"
+        android:checked="true"
+        android:layout_below="@+id/editText2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
         android:text="@string/auto_pilot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
