--- a/client/android/app/src/main/res/layout/activity_main.xml
+++ b/client/android/app/src/main/res/layout/activity_main.xml
@@ -35,14 +35,13 @@
         android:layout_alignParentStart="true" />
 
     <CheckBox
-        android:text="@string/secure_connection"
+        android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox1"
+        android:layout_above="@+id/button"
+        android:layout_centerHorizontal="true"
         android:checked="true"
-        android:layout_below="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="@string/compress_connection" />
 
     <CheckBox
         android:text="@string/auto_pilot"
