--- a/client/ios/bubbles/bubbles/Base.lproj/Main.storyboard
+++ b/client/ios/bubbles/bubbles/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LYL-kB-fi1" customClass="DrawView" customModule="bubbles" customModuleProvider="target">
+                            <view contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="LYL-kB-fi1" customClass="DrawView" customModule="bubbles" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -148,6 +148,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EeC-h8-vPk"/>
                     </view>
+                    <connections>
+                        <outlet property="drawView" destination="LYL-kB-fi1" id="WPr-bU-7i4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W73-Gs-swT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
